# guardianclaw-platform

./: .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.md  RELEASE.md  SECURITY.md  package-lock.json  package.json  turbo.json  vercel.json
.github/: CODEOWNERS  (+1 more)
integrations/promptfoo/: CHANGELOG.md  README.md  claw-plugin.yaml  guardianclaw_provider.py  promptfooconfig.example.yaml  pyproject.toml  test_provider.py
integrations/promptfoo/guardianclaw_promptfoo/: __init__.py  provider.py
sdk/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
sdk/src/guardianclaw/: __init__.py  guardianclaw_core.py  py.typed
sdk/src/guardianclaw/compliance/: __init__.py  csa_aicm.py  eu_ai_act.py  example.py  owasp_agentic.py  owasp_llm.py
sdk/src/guardianclaw/core/: __init__.py  claw_config.py  claw_results.py  claw_validator.py  exceptions.py  interfaces.py  observer.py  retry.py  token_tracker.py  types.py
sdk/src/guardianclaw/database/: README.md  __init__.py  guard.py
sdk/src/guardianclaw/detection/: __init__.py  benign_context.py  config.py  input_validator.py  normalizer.py  output_validator.py  registry.py  types.py
sdk/src/guardianclaw/detection/behaviors/: __init__.py  analyzer.py  types.py
sdk/src/guardianclaw/detection/behaviors/detectors/: __init__.py  adversarial.py  base.py  boundary_violation.py  deception.py  goal_misalignment.py  instrumental_convergence.py  output_integrity.py  self_preservation.py  social_engineering.py  systemic_risk.py  user_harm.py
sdk/src/guardianclaw/detection/checkers/: __init__.py  base.py  behavior_checker.py  bypass.py  compliance.py  deception.py  embedding.py  harmful.py  output_signal.py  semantic.py  sensitive_data.py  toxicity.py
sdk/src/guardianclaw/detection/detectors/: __init__.py  base.py  escalation.py  framing.py  harmful_request.py  intent_signal.py  pattern.py  patterns_database.py  physical_safety.py  safe_agent_detector.py  semantic.py
sdk/src/guardianclaw/detection/embeddings/: __init__.py  detector.py  ollama.py  openai.py  provider.py  vectors.py
sdk/src/guardianclaw/fiduciary/: README.md  __init__.py  example.py
sdk/src/guardianclaw/integrations/: __init__.py  _base.py
sdk/src/guardianclaw/integrations/agent_validation/: README.md  __init__.py  example.py  test_agent_validation.py
sdk/src/guardianclaw/integrations/anthropic_sdk/: README.md  __init__.py  example.py  test_anthropic_sdk.py
sdk/src/guardianclaw/integrations/coinbase/: README.md  __init__.py  config.py  example.py
sdk/src/guardianclaw/integrations/garak/: README.md  __init__.py  detectors.py  example.py  install.py  probes.py
sdk/src/guardianclaw/integrations/google_adk/: README.md  __init__.py  callbacks.py  example.py  plugin.py  test_google_adk.py  test_integration.py  utils.py
sdk/src/guardianclaw/integrations/mcp_server/: README.md  __init__.py  __main__.py  example.py
sdk/src/guardianclaw/integrations/openai_agents/: README.md  __init__.py  agents.py  config.py  example.py  guardrails.py  models.py  sanitization.py  utils.py
sdk/src/guardianclaw/integrations/openguardrails/: README.md  __init__.py  example.py  test_openguardrails.py
sdk/src/guardianclaw/integrations/pyrit/: README.md  __init__.py  example.py  scorers.py
sdk/src/guardianclaw/integrations/solana_agent_kit/: README.md  __init__.py  example.py  test_memory_integration.py
sdk/src/guardianclaw/integrations/stripe/: __init__.py  audit.py  config.py  middleware.py  types.py  validators.py
sdk/src/guardianclaw/integrations/tests/: test_fiduciary_integration.py
sdk/src/guardianclaw/integrations/virtuals/: README.md  __init__.py  example.py  test_fiduciary_integration.py  test_memory_integration.py
sdk/src/guardianclaw/memory/: README.md  __init__.py  checker.py  content_validator.py  patterns.py
sdk/src/guardianclaw/providers/: __init__.py  anthropic.py  openai.py
sdk/src/guardianclaw/safety/: __init__.py  base.py
sdk/src/guardianclaw/safety/humanoid/: README.md  __init__.py  balance.py  body_model.py  constraints.py  example.py  presets.py  validators.py
sdk/src/guardianclaw/safety/mobile/: __init__.py  zones.py
sdk/src/guardianclaw/safety/simulation/: __init__.py  action_types.py  constraints.py
sdk/src/guardianclaw/seeds/: full.txt  minimal.txt  standard.txt
sdk/src/guardianclaw/validation/: __init__.py  claw_adapter.py  config.py  layered.py  types.py
sdk/src/guardianclaw/validators/: README.md  __init__.py  gates.py  semantic.py
sdk/tests/: __init__.py  conftest.py  test_anthropic_sdk.py  test_compliance.py  test_core.py  test_core_exceptions.py  test_core_token_tracker.py  test_csa_aicm.py  test_database.py  test_detection_bypass_checker.py  test_detection_checkers_base.py  test_detection_compliance_checker.py  test_detection_config.py  test_detection_detectors_base.py  test_detection_detectors_escalation.py  test_detection_detectors_framing.py  test_detection_detectors_harmful_request.py  test_detection_embeddings.py  test_detection_input_validator.py  test_detection_normalizer.py  test_detection_output_validator.py  test_detection_registry.py  test_detection_types.py  test_fiduciary.py  test_garak_integration.py  test_guardianclaw_v3.py  test_harmful_request_calibration.py  test_humanoid.py  test_integration_base.py  test_layered_validator.py  test_mcp_server_integration.py  test_memory.py  test_memory_benchmarks.py  test_memory_content_validator.py  test_memory_integration_v2.py  test_memory_integrations_regression.py  test_memory_patterns.py  test_openai_agents.py  test_openguardrails.py  test_owasp_agentic.py  (+12 more)
sdk/tests/fixtures/: harmful_request_calibration.json
sdk/tests/integrations/: test_audit_sink.py  test_coinbase.py  test_drainer_db.py  test_simulation.py  test_stripe.py  test_stripe_audit.py  test_stripe_drainer_integration.py  test_x402.py  test_x402_drainer_integration.py
(+1173 files in other folders)
