[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardianclaw-promptfoo"
version = "1.0.1"
description = "claw safety provider for Promptfoo - CLAW protocol validation for red-teaming"
readme = "README.md"
license = "MIT"
authors = [
    { name = "claw Team", email = "contact@guardianclaw.org" }
]
keywords = [
    "promptfoo",
    "ai-safety",
    "red-teaming",
    "claw",
    "claw",
    "llm-testing",
    "evaluation",
    "alignment"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = ["openai>=1.0.0", "anthropic>=0.20.0"]

[project.urls]
Homepage = "https://guardianclaw.org"
Documentation = "https://guardianclaw.org/docs/promptfoo"
Repository = "https://github.com/guardianclaw/guardianclaw-platform"
Issues = "https://github.com/guardianclaw/guardianclaw-platform/issues"

[tool.hatch.build.targets.wheel]
packages = ["guardianclaw_promptfoo"]
